# interaction

./: .gitignore  README.md  index.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/app/core/: config.py  errors.py
backend/app/models/: interactions.py  medication.py  patient.py
backend/app/routers/: interactions.py  medications.py  patients.py  pdf_import.py
backend/app/services/: medication_parser.py  patient_store.py  pdf_extractor.py  rx_label_guard_client.py
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: InteractionResults.tsx  MedicationForm.tsx  MedicationTable.tsx  PatientDetails.tsx  PatientList.tsx  PdfImport.tsx
