[project]
name = "interaction-poc-vercel-runtime"
version = "0.1.0"
description = "Runtime constraints for Vercel deployment"
requires-python = "~=3.12.0"
dependencies = [
  "fastapi==0.115.6",
  "pydantic==2.13.4",
  "pydantic-settings==2.13.1",
  "httpx==0.28.1",
  "PyMuPDF==1.25.1",
  "python-dotenv==1.0.1",
  "python-multipart==0.0.20",
]
